--- a/src/index.css
+++ b/src/index.css
@@ -25,4 +25,7 @@ code {
   .title-text{
     @apply font-black font-['title'] text-3xl
   }
+  .link{
+    @apply underline bg-green-400 cursor-pointer font-light active:text-[#A9C79E]
+  }
 }
